--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
         "lint:css:fix": "stylelint \"views/**/*.{css,less}\" --fix"
     },
     "dependencies": {
+        "axios": "^1.13.2",
         "basic-auth": "^2.0.1",
         "cookie-parser": "^1.4.6",
         "dotenv": "^16.4.5",
         "express": "^4.19.2",
         "express-session": "^1.18.0",
+        "mime-types": "^3.0.2",
         "playwright": "^1.53.1",
         "ws": "^8.17.0"
     },
